--- a/app/src/main/res/layout/activity_play_sound.xml
+++ b/app/src/main/res/layout/activity_play_sound.xml
@@ -15,37 +15,37 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="230dp"
+            android:layout_width="260dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/nameView"
-                android:layout_marginLeft="10dp"
-                android:layout_width="0dp"
+                android:layout_width="10dp"
                 android:layout_height="25dp"
+                android:layout_marginLeft="0dp"
                 android:layout_weight="3"
                 android:textColor="#ffffff"
                 android:textSize="17dp" />
 
             <TextView
                 android:id="@+id/lengthView"
-                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_height="25dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#ffffff"
                 android:textSize="17dp" />
 
             <TextView
                 android:id="@+id/sizeView"
-                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_height="25dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#ffffff"
                 android:textSize="17dp" />
         </LinearLayout>
@@ -84,6 +84,13 @@
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:background="@drawable/stop_sound"
+                android:onClick="onStopVoiceClicked" />
+
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="5dp"
                 android:background="@drawable/next_voice"
                 android:onClick="onNextVoiceClicked" />
 
@@ -129,6 +136,13 @@
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:background="@drawable/stop_sound"
+                android:onClick="onStopVoiceClicked" />
+
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="5dp"
                 android:background="@drawable/next_voice"
                 android:onClick="onNextVoiceClicked" />
 
