--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,59 +9,51 @@
     tools:context="com.example.kahkeshaniha.androidsoundrecorder.MainActivity">
 
     <LinearLayout
-        android:id="@+id/emptyLinearLayout"
+        android:id="@+id/MainLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="visible">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="80dp"
-            android:background="@drawable/no_sound" />
+        <!--<ImageView-->
+            <!--android:layout_width="100dp"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_marginTop="80dp"-->
+            <!--android:background="@drawable/no_sound" />-->
 
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="Records list is empty. Tap button in buttom right corner to start new recording"
-            android:textAlignment="center" />
-
-        <ImageButton
-            android:id="@+id/newRecordBtn1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="190dp"
-            android:background="@drawable/new_recorder"
-            android:onClick="onRecordClicked" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/fullLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="invisible">
+        <!--<TextView-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:text="Records list is empty. Tap button in buttom right corner to start new recording"-->
+            <!--android:textAlignment="center" />-->
 
         <ListView
             android:id="@+id/soundListView"
             android:layout_width="match_parent"
-            android:layout_height="400dp" />
-
-        <ImageButton
-            android:id="@+id/newRecordBtn2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/new_recorder"
-            android:onClick="onRecordClicked" />
-
+            android:layout_height="match_parent" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/emptyElement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="The Records list is empty."
+        android:textColor="#525252"
+        android:textSize="19.0sp"
+        android:visibility="gone" />
+
+    <ImageButton
+        android:id="@+id/newRecordBtn1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="right"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/new_recorder"
+        android:onClick="onRecordClicked" />
 
 </RelativeLayout>
